




<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.AsadJaved.assignment3.DetailActivityFragment"
        tools:showIn="@layout/activity_detail"

        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Genre"
            android:id="@+id/Top_genre"
            android:gravity="left|top"


            android:layout_alignBottom="@+id/time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Time"
            android:id="@+id/time"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="N/A"
            android:id="@+id/plot"

            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Top_genre" />

        <ImageButton
            android:layout_width="107dp"
            android:layout_height="160dp"
            android:id="@+id/detail_item_img"
            android:layout_below="@+id/plot"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />





        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Rating"
            android:textColor="#ff0000"
            android:id="@+id/detail_rating"
            android:layout_marginLeft="50dp"
            android:layout_alignTop="@+id/detail_item_img"
            android:layout_toRightOf="@+id/detail_item_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="N/A"
            android:id="@+id/rating"
            android:layout_below="@+id/detail_rating"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/detail_item_img"
            android:layout_alignLeft="@+id/detail_rating"
            android:layout_alignStart="@+id/detail_rating" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Votes"
            android:id="@+id/detail_votes"
            android:layout_below="@+id/rating"
            android:layout_toRightOf="@+id/detail_item_img"
            android:layout_toEndOf="@+id/detail_item_img"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:textColor="#0000cc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="N/A"
            android:id="@+id/votes"
            android:layout_below="@+id/detail_votes"
            android:layout_toRightOf="@+id/detail_item_img"
            android:layout_toEndOf="@+id/detail_item_img"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            />

        <TextView
            android:layout_below="@+id/detail_item_img"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/line"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Genre"
            android:id="@+id/detail_genre"
            android:layout_below="@+id/line"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="N/A"
            android:id="@+id/genre2"
            android:layout_below="@+id/detail_genre"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Release_Date"
            android:id="@+id/deatail_release"
            android:layout_below="@+id/genre2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="N/A"
            android:id="@+id/release_date"
            android:layout_below="@+id/deatail_release"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Awards"
            android:id="@+id/detail_award"
            android:layout_below="@id/release_date"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="N/A"
            android:id="@+id/award"
            android:layout_below="@+id/detail_award"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_below="@+id/award"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/line1"/>



        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Actors"
            android:id="@+id/detail_actor"
            android:layout_below="@id/line1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="N/A"
            android:id="@+id/actor"
            android:layout_below="@+id/detail_actor"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Writer"
            android:id="@+id/detail_writer"
            android:layout_below="@id/actor"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="N/A"
            android:id="@+id/writer"
            android:layout_below="@+id/detail_writer"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />











        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Director"
            android:id="@+id/detail_director"
            android:layout_below="@id/writer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="N/A"
            android:id="@+id/director"
            android:layout_below="@+id/detail_director"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_below="@+id/director"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/line2"/>
































        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Language"
            android:id="@+id/detail_language"
            android:layout_below="@id/line2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="N/A"
            android:id="@+id/language"
            android:layout_below="@+id/detail_language"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />






















        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Country"
            android:id="@+id/detail_country"
            android:layout_below="@id/language"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="N/A"
            android:id="@+id/country"
            android:layout_below="@+id/detail_country"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

















    </RelativeLayout>
</ScrollView>